--- a/test/fixtures/js.shadow-dom.html
+++ b/test/fixtures/js.shadow-dom.html
@@ -28,5 +28,5 @@
 
   root.appendChild(shadowHost())
 
-  export default window.modernScreenshot.domToPng(root)
+  export default window.html2image.domToPng(root)
 </script>
