--- a/test/fixtures/xml.legal-character.html
+++ b/test/fixtures/xml.legal-character.html
@@ -22,5 +22,5 @@
     root.appendChild(span)
   })
 
-  export default window.modernScreenshot.domToPng(root)
+  export default window.html2image.domToPng(root)
 </script>
