--- a/test/fixtures/option.scale.html
+++ b/test/fixtures/option.scale.html
@@ -19,7 +19,7 @@
 </template>
 
 <script type="module">
-  export default window.modernScreenshot.domToPng(document.querySelector('#root'), {
+  export default window.html2image.domToPng(document.querySelector('#root'), {
     width: 200,
     height: 200,
     style: {
